--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empty-project",
+  "name": "dashboard-for-market-platform",
   "version": "0.1.0",
   "private": true,
   "scripts": {
